<resources>
    <string name="appbar_scrolling_view_behavior_manuka" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_name">Ronicy</string>
    <string name="site_name">Ronicy.lk</string>
    <string name="slogan">SRILANKA\'S LARGEST MARKETPLACE</string>
    <string name="dashboardVersion">Dashboard v6.1</string>
    <string name="facebook_app_id">2691093471145086</string>
    <string name="fb_login_protocol_scheme">fb2691093471145086</string>
    <string name="image">image view</string>
    <string name="company_phone">011 25 25 568 </string>
    <string name="phone_number_unknown">xxxxxxxxxx</string>
    <string name="loading">loading...</string>
    <string name="not_loggedIn">Dear user you are not logged in, please logged in to continue..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continueBtn">Continue</string>
    <string name="paynowBTN">Pay Now</string>
    <string name="gender">Gender</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="living">Living in</string>
    <string name="menu_location">Location</string>
    <string name="menu_category">Category</string>
    <string name="menu_filter">filter</string>
    <string name="enterCode_SMS_SENT_TO">SMS sent to:</string>
    <string name="enterCode_time_arrive">Please note that it will take a few minutes to arrive.</string>
    <string name="enterCode_editText_hint">Enter PIN code (6 digits)</string>
    <string name="enterCode_didnt_recieve">Didn\'t recieve the SMS after 10 mins?</string>
    <string name="enterCode_check_your_phone_again">Check your phone and try again ></string>
    <string name="enterNumber">Please enter your phone number</string>
    <string name="haveNotVerified">If you have not verified it before, we will send you an SMS with a PIN code to make sure that we can get in touch with you.</string>
    <string name="phoneNumberText">Phone number (Ex 77 123 45 67)</string>
    <string name="addAPhoneButton">Add a phone number</string>
    <string name="posting_allowance">Your posting allowance</string>
    <string name="free_on_ronicy">Learn about posting adds for free on Ronicy</string>
    <string name="all_categories">All Categories</string>
    <string name="sell_an_item">Sell an item or service</string>
    <string name="post_details">Ad Details: </string>
    <string name="post_title">Ad Title</string>
    <string name="post_condition">Item Condition</string>
    <string name="post_description">Ad Description</string>
    <string name="post_price">Item Price (Rs)</string>
    <string name="post_update_btn">Update ad</string>
    <string name="post_new_btn">Post ad</string>
    <string name="post_choose_image_btn">Change Image</string>
    <string name="post_add_image_btn">Add a Image</string>
    <string name="post_add_1_image">Add at least one photo (max 5):</string>
    <string name="more_than5images">You can not have more than 5 images</string>
    <string name="tile_error">Ad title must have at least 10 characters</string>
    <string name="condition_error">Select the condition of the item</string>
    <string name="description_error">Ad description must have at least 20 characters</string>
    <string name="price_error">Ad price must be at least greater than Rs 10.00</string>
    <string name="contact_details">Contact Details: </string>
    <string name="phoneNumbers">Phone number(s)</string>
    <string name="contact_detailsName">Name</string>
    <string name="contact_detailsEmail">Email</string>
    <string name="contact_detailsTermsAndConditions">By posting this ad you agree to our terms and conditions</string>
    <string name="contact_detailsAdd">Add another phone number</string>
    <string name="contact_detailsHide">Hide my phone number(s)</string>
    <string name="contact_details_error">You need to have at least one verified number</string>
    <string name="newImage">Add new Image</string>
    <string name="adCall">Contact Seller</string>
    <string name="adChat">Chat Seller</string>
    <string name="adDescription">Description</string>
    <string name="adLocation">Location: </string>
    <string name="adLocationText"> Sri Lanka</string>
    <string name="adPosted">Posted: </string>
    <string name="adCategory">Category: </string>
    <string name="adCondition">Condition: </string>
    <string name="adForSale">For sale by member</string>
    <string name="adBuynow">Buy Now </string>
    <string name="selectLocation">Select location for your ad: </string>
    <string name="locationSelectorLocation">Location </string>
    <string name="locationAuto">The location for this ad was set automatically.</string>
    <string name="useLocationBtn">Use this location</string>
    <string name="changeLocation">Change location</string>
    <string name="order_phone_header">Please verify your phone number: </string>
    <string name="order_phone_subheading">Enter the PIN code that was sent to this phone number via SMS</string>
    <string name="order_phone_btn_verify">Verify</string>
    <string name="order_phone_cancel">Cancel</string>
    <string name="order_phone_new_pin">Get new PIN code</string>
    <string name="order_phone_didnt_recieve">Didn\'t receive the PIN code?</string>
    <string name="virtual_env_exception">This feature will not work in a virtual environment. Try with your mobile phone.</string>
    <string name="quota_exceeded">The SMS quota for this project has been exceeded!</string>
    <string name="invalid_mobile">Invalid mobile number!.</string>
    <string name="sending_code">Sending validation code....</string>
    <string name="invalid_mobile_code">Entered code is invalid!</string>
    <string name="verify_code_sent">Verification code was sent successfully!</string>
    <string name="verify_code_not_sent">Verification code was not sent. Please check your credentials</string>
    <string name="orderStepHeader">Complete your purchase in 3 simple steps</string>
    <string name="orderDeliveryHeader">Delivery Summary</string>
    <string name="orderName">Name </string>
    <string name="orderPhone">Phone number </string>
    <string name="orderEmail">Email </string>
    <string name="orderAddress">Delivery address </string>
    <string name="orderItemPrice">Item price </string>
    <string name="orderItemDelivery">Delivery fee </string>
    <string name="orderItemDeliveryFee">Free </string>
    <string name="orderItemPaymentTotal">Total </string>
    <string name="orderItemPayment">Select a payment method</string>
    <string name="orderItemPaymentCredit">Credit/Debit card</string>
    <string name="orderItemPaymentCOD">Pay on Delivery</string>
    <string name="orderItemPaymentInfo">Use our secure online payment tool to pay now and get your order delivered faster</string>
    <string name="secureCheckoutPaymentInfo">Use our secure online payment tool to pay now and get your purchases complete faster.</string>
    <string name="orderIDText">OrderID: </string>
    <string name="orderThankyou">Thank you for placing  your order!</string>
    <string name="orderContactYou">We will contact you during working hours to confirm your details and arrange for delivery</string>
    <string name="orderHelp">Need help or want to cancel your order? </string>
    <string name="orderCallus">Call Ronicy.lk </string>
    <string name="donate_header">Help us make a bigger impact</string>
    <string name="donate_sub_header">Be a part of our family</string>
    <string name="donate_name">Your name </string>
    <string name="donate_email">Email address</string>
    <string name="donate_phone">Contact number</string>
    <string name="donate_amount">Donation amount(LKR)</string>
    <string name="btn_donate_Now">Donate Now</string>
    <string name="account">Account</string>
    <string name="account_getStarted">Get started with ikman</string>
    <string name="account_myads">My Ads</string>
    <string name="account_membership">My membership</string>
    <string name="account_fav">Favourites</string>
    <string name="account_profile">My profile</string>
    <string name="account_safe">Stay safe</string>
    <string name="account_faq">Get In Touch</string>
    <string name="account_howto">How to sell fast</string>
    <string name="account_donate">Donate us</string>
    <string name="account_logout">Log out</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_upNow">Sign up now</string>
    <string name="continueWithFb">Continue with Facebook</string>
    <string name="already_have_anAccount">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="invalidEmail">Please enter your valid email address</string>
    <string name="invalidPasswordLogin">Please enter your password</string>
    <string name="invalidPasswordSignup">Password must have more than 8 characters</string>
    <string name="invalidLogin">Error: Invalid credententials</string>
    <string name="invalidRegister">Error: Account registration failed</string>
    <string name="notLinked">An account exist with your facebook email address, please sign in to your local account in ronicy.lk and link it with your facebook account.</string>
    <string name="linkFb">Connect with facebook</string>
    <string name="linkFbSuccess">Your facebook account was successfully linked</string>
    <string name="linkFbError">Error: Your facebook account was not linked. This may be due to an existing account linked with facebook or facebook account email you provided.</string>
    <string name="linkFbRemoveSuccess">Your facebook account was successfully removed</string>
    <string name="linkFbRemoveError">There was an error, please try again latter.</string>
    <string name="reviewAdsTitle">When a user post a new Ad or update an existing Ad, they wil be appeared here to be reviewed.</string>
    <string name="close">close</string>
    <string name="verification_code">Verification Code</string>
    <string name="title"> Presonal Notes </string>
    <string name="checkbox"> Contacted Salesman </string>
    <string name="Personal_Note"> Your personal Note...... </string>
    <string name="Appoinmet"> If you place an appointment with client Enter Details </string>
    <string name="date"> Date </string>
    <string name="time"> Time </string>
    <string name="btn"> Edit </string>
    <string name="AboutUsText">About Us</string>
    <string name="BugIdTextStirng">101</string>
    <string name="BugDescriptionText">There was a bug where pressing the button to contact seller was not working.</string>
    <string name="filedDateString">"Filed Date: "</string>
    <string name="IdString">"Id: "</string>
    <string name="staticDateString">2020-08-12</string>
    <string name="descriptionText">Description:</string>
    <string name="TextForEditBugBtn">Edit</string>
    <string name="textForDeleteBugBtn">Delete</string>
    <string name="BugStatusTopicText">Status:</string>
    <string name="BugStatusStaticText">Acknowledged</string>
    <string name="editText">Edit the details below</string>
    <string name="saveChangesBtnTxt">Save Changes</string>
    <string name="AppDescription">This is an application where we facillitate a seamless addvertising expeience to our users. We help advertisers to reach a vast audience through our platform. We are commited to supply a continued and improving service to our users.</string>
    <string name="email">adzbiz@weekend.com</string>
    <string name="EmailString">"Email: "</string>
    <string name="PhoneNumberTopic">"Phone Number: "</string>
    <string name="PhoneNumber">0712803772</string>
</resources>