<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.getintouch.ViewBugActivity"
    android:background="@color/colorHome">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IdString"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BugIdTextStirng"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filedDateString"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staticDateString"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionText"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BugDescriptionText"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BugStatusTopicText"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BugStatusStaticText"
            android:textColor="#000000"
            android:textSize="14sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/editBugBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button_blue"
                android:text="@string/TextForEditBugBtn"
                android:textColor="#000000">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/deleteBugBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button_red"
                android:text="@string/textForDeleteBugBtn"
                android:textColor="#000000">

            </Button>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>