<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="LabelFor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/orderDeliveryHeader"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderName"
        android:textSize="14sp"></TextView>

    <EditText
        android:id="@+id/orderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderPhone"
        android:textSize="14sp"></TextView>

    <EditText
        android:id="@+id/orderPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderEmail"
        android:textSize="14sp"></TextView>

    <EditText
        android:id="@+id/orderEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderAddress"
        android:textSize="14sp"></TextView>

    <EditText
        android:id="@+id/orderAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp" />
</LinearLayout>
